Fix wrapping issue for info section

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ button, a,
 
 .info-content {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .info-container {
